Modificações na página 'Produtos'
Exibição de imagem 'm' e da popup adicionada
Modificação na função 'pegarImagem' da classe de anúncios

--- a/css/style.css
+++ b/css/style.css
@@ -456,6 +456,18 @@ a:hover, a:active {
 	text-decoration: line-through;
 }
 
+#popup {
+	background-color: #FFFFFF;
+}
+
+.imagemProduto {
+	margin-top: 25px;
+}
+
+.imagemProduto img {
+	cursor: pointer;
+}
+
 .textoRodape {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 9px;
